Mongodb Questions
test> show dbs
admin   40.00 KiB
config  12.00 KiB
local   72.00 KiB
test> create own table
test> use student
switched to db student
student> show dbs
admin   40.00 KiB
config  12.00 KiB
local   72.00 KiB
student> db.createCollection("dbms")
{ ok: 1 }
student> show dbs
admin    40.00 KiB
config   12.00 KiB
local    72.00 KiB
student   8.00 KiB
student> db.dbms.insertOne({"rollno":1,"name":"ram"})
{
  acknowledged: true,
  insertedId: ObjectId('65f7fed16e0afe92318bf202')
}
student> show collections
dbms
student> db.dbms.find().pretty()
[
  { _id: ObjectId('65f7fed16e0afe92318bf202'), rollno: 1, name: 'ram' }
]
student> db.dbms.updateOne({rollno:1},{$set:{name:"sam"}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
student> db.dbms.drop()
true
student> show collection
student> show collections

student> db.dropDatabase()
{ ok: 1, dropped: 'student' }
student> show dbs
admin   40.00 KiB
config  92.00 KiB
local   72.00 KiB
student> use admin
switched to db admin
admin> use school
switched to db school
school> use univ
switched to db univ
univ> db.dropDatabase()
{ ok: 1, dropped: 'univ' }
univ> use school
switched to db school
school> db.dropDatabase()
{ ok: 1, dropped: 'school' }
school> use dbms
switched to db dbms
dbms> db
dbms
dbms> db.createCollection("marklist")
{ ok: 1 }
dbms> show collections
marklist
dbms> db.createCollection("parentdetails")
{ ok: 1 }
dbms> show collections
marklist
parentdetails
dbms> db
dbms
dbms> db.marklist.drop()
true
dbms> show collections
parentdetails
dbms> db.parentdetails.drop()
true
dbms> show collections

dbms> db.marklist.insert(
... {
... snmae:"ram",
... saddr:"kottayam",
... marks:"40"
... }
... )
DeprecationWarning: Collection.insert() is deprecated. Use insertOne, insertMany, or bulkWrite.
{
  acknowledged: true,
  insertedIds: { '0': ObjectId('65f801a06e0afe92318bf203') }
}
dbms> db.marklist.find()
[
  {
    _id: ObjectId('65f801a06e0afe92318bf203'),
    snmae: 'ram',
    saddr: 'kottayam',
    marks: '40'
  }
]
dbms> db.marklist.insert(
... grade:"A"
Uncaught:
SyntaxError: Unexpected token, expected "," (2:5)

  1 | db.marklist.insert(
> 2 | grade:"A"
    |      ^
  3 |

dbms> db.marklist.insert( { snmae: "ram", saddr: "kottayam", marks: "40",grade:"A" } )
{
  acknowledged: true,
  insertedIds: { '0': ObjectId('65f802386e0afe92318bf204') }
}
dbms> db.marklist.find()
[
  {
    _id: ObjectId('65f801a06e0afe92318bf203'),
    snmae: 'ram',
    saddr: 'kottayam',
    marks: '40'
  },
  {
    _id: ObjectId('65f802386e0afe92318bf204'),
    snmae: 'ram',
    saddr: 'kottayam',
    marks: '40',
    grade: 'A'
  }
]
dbms> db.marklist.find().pretty()
[
  {
    _id: ObjectId('65f801a06e0afe92318bf203'),
    snmae: 'ram',
    saddr: 'kottayam',
    marks: '40'
  },
  {
    _id: ObjectId('65f802386e0afe92318bf204'),
    snmae: 'ram',
    saddr: 'kottayam',
    marks: '40',
    grade: 'A'
  }
]
dbms> db.marklist.find().pretty()
[
  {
    _id: ObjectId('65f801a06e0afe92318bf203'),
    snmae: 'ram',
    saddr: 'kottayam',
    marks: '40'
  },
  {
    _id: ObjectId('65f802386e0afe92318bf204'),
    snmae: 'ram',
    saddr: 'kottayam',
    marks: '40',
    grade: 'A'
  }
]
dbms> db.marklist.insert( { snmae: "ammu", saddr: "pala", marks: "50",grade:"A" } )
{
  acknowledged: true,
  insertedIds: { '0': ObjectId('65f803d06e0afe92318bf205') }
}
dbms> db.marklist.find().pretty()
[
  {
    _id: ObjectId('65f801a06e0afe92318bf203'),
    snmae: 'ram',
    saddr: 'kottayam',
    marks: '40'
  },
  {
    _id: ObjectId('65f802386e0afe92318bf204'),
    snmae: 'ram',
    saddr: 'kottayam',
    marks: '40',
    grade: 'A'
  },
  {
    _id: ObjectId('65f803d06e0afe92318bf205'),
    snmae: 'ammu',
    saddr: 'pala',
    marks: '50',
    grade: 'A'
  }
]
dbms> db.marklist.insert( { snmae: "sera", saddr: "kzhd", marks: "50",grade:"A" } )
{
  acknowledged: true,
  insertedIds: { '0': ObjectId('65f805026e0afe92318bf206') }
}
dbms> db.marklist.insert( { snmae: "jose", saddr: "plkd", marks: 30",grade:"B" } )
Uncaught:
SyntaxError: Unexpected token, expected "," (1:61)

> 1 | db.marklist.insert( { snmae: "jose", saddr: "plkd", marks: 30",grade:"B" } )
    |                                                              ^
  2 |

dbms> db.marklist.insert( { snmae: "jose", saddr: "plkd", marks: "30",grade:"B" } )
{
  acknowledged: true,
  insertedIds: { '0': ObjectId('65f8055a6e0afe92318bf207') }
}
dbms> db.marklist.find().pretty()
[
  {
    _id: ObjectId('65f801a06e0afe92318bf203'),
    snmae: 'ram',
    saddr: 'kottayam',
    marks: '40'
  },
  {
    _id: ObjectId('65f802386e0afe92318bf204'),
    snmae: 'ram',
    saddr: 'kottayam',
    marks: '40',
    grade: 'A'
  },
  {
    _id: ObjectId('65f803d06e0afe92318bf205'),
    snmae: 'ammu',
    saddr: 'pala',
    marks: '50',
    grade: 'A'
  },
  {
    _id: ObjectId('65f805026e0afe92318bf206'),
    snmae: 'sera',
    saddr: 'kzhd',
    marks: '50',
    grade: 'A'
  },
  {
    _id: ObjectId('65f8055a6e0afe92318bf207'),
    snmae: 'jose',
    saddr: 'plkd',
    marks: '30',
    grade: 'B'
  }
]
dbms> use university
switched to db university
university> db.createCollection("dept")
{ ok: 1 }
university> db.createCollection("emp")
{ ok: 1 }
university> db.emp.insert([{emp_id:101,emp_name:"Bibin",emp_dept:"Mca",emp_salary:"50000"},{emp_id:102,emp_nmae:"Athulya",emp_dept:"Bca",emp_salary:"30000"},{emp_id:103,emp_name:"Devan",emp_dept:"Cs",emp_salary:"50000"},{emp_id:104,emp_name:"jibin",emp_dept:"B.tech",emp_salary:50000},{emp_id:105,emp_name:"Arjun",emp_dept:"mca",emp_salary:300000},{emp_iemp_id:106,emp_name:"revu",emo_dept:"Bca",emp_salary:30000}])
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('65f80ded6e0afe92318bf208'),
    '1': ObjectId('65f80ded6e0afe92318bf209'),
    '2': ObjectId('65f80ded6e0afe92318bf20a'),
    '3': ObjectId('65f80ded6e0afe92318bf20b'),
    '4': ObjectId('65f80ded6e0afe92318bf20c'),
    '5': ObjectId('65f80ded6e0afe92318bf20d')
  }
}
university> db.emp.find().pretty()
[
  {
    _id: ObjectId('65f80ded6e0afe92318bf208'),
    emp_id: 101,
    emp_name: 'Bibin',
    emp_dept: 'Mca',
    emp_salary: '50000'
  },
  {
    _id: ObjectId('65f80ded6e0afe92318bf209'),
    emp_id: 102,
    emp_nmae: 'Athulya',
    emp_dept: 'Bca',
    emp_salary: '30000'
  },
  {
    _id: ObjectId('65f80ded6e0afe92318bf20a'),
    emp_id: 103,
    emp_name: 'Devan',
    emp_dept: 'Cs',
    emp_salary: '50000'
  },
  {
    _id: ObjectId('65f80ded6e0afe92318bf20b'),
    emp_id: 104,
    emp_name: 'jibin',
    emp_dept: 'B.tech',
    emp_salary: 50000
  },
  {
    _id: ObjectId('65f80ded6e0afe92318bf20c'),
    emp_id: 105,
    emp_name: 'Arjun',
    emp_dept: 'mca',
    emp_salary: 300000
  },
  {
    _id: ObjectId('65f80ded6e0afe92318bf20d'),
    emp_id: 106,
    emp_name: 'revu',
    emo_dept: 'Bca',
    emp_salary: 30000
  }
]
university> db.emp.insert([{dept_id:10,dept_name:"Mca"},{dept_id:12,dept_name:"Bca"},{dept_id:13,dept_name:"Bca"}])
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('65f80fbf6e0afe92318bf20e'),
    '1': ObjectId('65f80fbf6e0afe92318bf20f'),
    '2': ObjectId('65f80fbf6e0afe92318bf210')
  }
}
university> db.dept.find().pretty()

university> db.dept.insert([{dept_id:10,dept_name:"Mca"},{dept_id:12,dept_name:"Bca"},{dept_id:13,dept_name:"Bca"}])
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('65f810eb6e0afe92318bf211'),
    '1': ObjectId('65f810eb6e0afe92318bf212'),
    '2': ObjectId('65f810eb6e0afe92318bf213')
  }
}
university> db.dept.find().pretty()
[
  {
    _id: ObjectId('65f810eb6e0afe92318bf211'),
    dept_id: 10,
    dept_name: 'Mca'
  },
  {
    _id: ObjectId('65f810eb6e0afe92318bf212'),
    dept_id: 12,
    dept_name: 'Bca'
  },
  {
    _id: ObjectId('65f810eb6e0afe92318bf213'),
    dept_id: 13,
    dept_name: 'Bca'
  }
]
university> db.dropDatabase()
{ ok: 1, dropped: 'university' }
university>

